# Acid.Cam.v2.Qt

./: README.md
deb/AcidCam_Qt/DEBIAN/: control
deb/AcidCam_Qt/usr/share/acidcam/: acicon.xpm  acidcam-qt.desktop
deb/AcidCam_Qt/usr/share/applications/: acidcam-qt.desktop
src/: Acid.Cam.v2.Linux.Qt.pro  Acid.Cam.v2.OpenCV3.Linux.pro  Acid.Cam.v2.OpenCV3.pro  Acid.Cam.v2.OpenCV4.Linux.pro  Acid.Cam.v2.OpenCV4.pro  Acid.Cam.v2.Qt  Acid.Cam.v2.Qt.pro  Acid_Cam_v2_Qt  CMakeLists.txt  Makefile  ac.cpp  ac.h  chroma_window.cpp  chroma_window.h  color_range.cpp  color_range.h  controller.cpp  controller.h  display_window.cpp  display_window.h  dl-man.cpp  dl-man.h  ffmpeg_encoder_thread.cpp  ffmpeg_encoder_thread.h  ffmpeg_write.cpp  ffmpeg_write.h  fractal.cpp  fractal.h  gl_display.cpp  gl_display.h  goto_window.cpp  goto_window.h  image_window.cpp  image_window.h  main.cpp  main_window.cpp  main_window.h  moc_chroma_window.cpp  moc_color_range.cpp  moc_display_window.cpp  (+31 more)
src/Acid_Cam_v2_Qt.app/Contents/: Info.plist
src/Acid_Cam_v2_Qt.app/Contents/MacOS/: Acid_Cam_v2_Qt
src/plugins/basic/: Makefile  basic.cpp
src/plugins/basic/BasicFilter/: BasicFilter.opensdf
src/plugins/basic/BasicFilter/BasicFilter/: BasicFilter.cpp  stdafx.cpp
src/plugins/basic/BasicFilter/BasicFilter/Debug/: vc120.idb
src/plugins/basic/BasicFilter/BasicFilter/Debug/BasicFilter.tlog/: BasicFilter.lastbuildstate  BasicFilter.write.1u.tlog  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/plugins/basic/BasicFilter/BasicFilter/Release/BasicFilter.tlog/: BasicFilter.lastbuildstate  BasicFilter.write.1u.tlog  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
windows/: Acid.Cam.v2.Qt.VS2013.pro  AcidCam.pro  README.md
windows/Acid.Cam.Qt.Windows.March.2019/: AcidCam.pro  Makefile  chroma_window.cpp  display_window.cpp  display_window.h  goto_window.cpp  main.cpp  main_window.cpp  new_dialog.cpp  qtheaders.h  search_box.cpp
windows/Acid.Cam.Qt.Windows.Project/: AcidCam.pro  Makefile  README.md  acidcam.ifp  main_window.cpp  main_window.h  new_dialog.cpp  new_dialog.h  qtheaders.h  search_box.cpp  select_image.cpp
windows/Acid.Cam.Qt.Windows.Project/plugins/basic/BasicFilter/: BasicFilter.sln
windows/Acid.Cam.Qt.Windows.Project/plugins/basic/BasicFilter/BasicFilter/: BasicFilter.h  BasicFilter.vcxproj  BasicFilter.vcxproj.filters  ReadMe.txt
windows/Acid.Cam.Windows.Qt.Project/: Acid.Cam.v2.OpenCV4.pro  AcidCam.pro  Makefile  Makefile.am  Makefile.in  README.md  acidcam.ifp  chroma_window.cpp  display_window.cpp  dl-man.cpp  goto_window.h  image_window.cpp  main_window.h  new_dialog.h  options_window.cpp  options_window.h  plugin.cpp  qresource.qrc  tokenize.hpp  user_define.cpp  user_define.h  win-icon.rc
windows/libacidcam/: ac-filter2.cpp  ac-filter21.cpp  ac-filter23.cpp  ac-filter31.cpp  ac-filter40.cpp  ac-filter41.cpp  ac-filter45.cpp
